2017-01-13  Gary Dismukes  <dismukes@adacore.com>
	* inline.adb: Minor reformatting and typo fix.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244415 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-13  Gary Dismukes  <dismukes@adacore.com>
+
+	* inline.adb: Minor reformatting and typo fix.
+
 2017-01-13  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_util.ads, sem_util.adb (Choice_List): Move function here
