2017-01-13  Hristian Kirtchev  <kirtchev@adacore.com>
	* sem_aggr.adb, sem_ch3.adb, inline.adb, sem_util.adb, exp_ch4.adb,
	exp_aggr.adb: Minor reformatting.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244416 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-13  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* sem_aggr.adb, sem_ch3.adb, inline.adb, sem_util.adb, exp_ch4.adb,
+	exp_aggr.adb: Minor reformatting.
+
 2017-01-13  Gary Dismukes  <dismukes@adacore.com>
 
 	* inline.adb: Minor reformatting and typo fix.
