2017-01-13  Gary Dismukes  <dismukes@adacore.com>
	* bindgen.adb, sem_ch6.adb, binde.adb, exp_ch3.adb: Minor reformatting
	and typo fixes.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244420 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-13  Gary Dismukes  <dismukes@adacore.com>
+
+	* bindgen.adb, sem_ch6.adb, binde.adb, exp_ch3.adb: Minor reformatting
+	and typo fixes.
+
 2017-01-13  Javier Miranda  <miranda@adacore.com>
 
 	* einfo.ads (Component_Bit_Offset): Fix documentation.
