--- a/fixincludes/ChangeLog
+++ b/fixincludes/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-13  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	PR libstdc++/78979
+	* inclhack.def (solaris_gets_c11, solaris_gets_cxx14)
+	(solaris_std_gets_cxx14, solaris_stdlib_noreturn): New fixes.
+	* fixincl.x: Regenerate.
+	* tests/base/iso/stdio_iso.h [SOLARIS_GETS_C11_CHECK,
+	SOLARIS_GETS_CXX14_CHECK, SOLARIS_STD_GETS_CXX14_CHECK,
+	SOLARIS_STDLIB_NORETURN_CHECK]: New tests.
+
 2016-11-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* inclhack.def (solaris_math_12): New fix.
