Require C11 for C++17 on Solaris
	* config/sol2.h (TARGET_OS_CPP_BUILTINS): Define __STDC_VERSION__
	to 201112L since C++17.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244430 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-13  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* config/sol2.h (TARGET_OS_CPP_BUILTINS): Define __STDC_VERSION__
+	to 201112L since C++17.
+
 2017-01-13  Maxim Ostapenko  <m.ostapenko@samsung.com>
 
 	PR sanitizer/78887
