PR78361 recognise noexcept functions as referenceable
2017-01-13  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/78361
	* testsuite/20_util/add_pointer/value.cc: Test forming function
	pointers.

2017-01-13  Michael Brune  <lucdanton@free.fr>

	PR libstdc++/78361
	* include/std/type_traits (__is_referenceable): Handle noexcept
	function types.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244432 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,15 @@
+2017-01-13  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/78361
+	* testsuite/20_util/add_pointer/value.cc: Test forming function
+	pointers.
+
+2017-01-13  Michael Brune  <lucdanton@free.fr>
+
+	PR libstdc++/78361
+	* include/std/type_traits (__is_referenceable): Handle noexcept
+	function types.
+
 2017-01-12  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/77528
