PR tree-optimization/33562 	PR tree-optimization/61912 	PR tree-optimization/77485 	* sbitmap.h (bitmap_count_bits): Prototype. 	(bitmap_clear_range, bitmap_set_range): Likewise. 	* sbitmap.c (bitmap_clear_range): New function. 	(bitmap_set_range, sbitmap_popcount, bitmap_count_bits): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244441 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-13  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/33562
+	PR tree-optimization/61912
+	PR tree-optimization/77485
+	* sbitmap.h (bitmap_count_bits): Prototype.
+	(bitmap_clear_range, bitmap_set_range): Likewise.
+	* sbitmap.c (bitmap_clear_range): New function.
+	(bitmap_set_range, sbitmap_popcount, bitmap_count_bits): Likewise.
+
 2017-01-13  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/79043
